# lux

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: calibration_design.md  cliff_plan.md  codesign_v1.md  codesign_v2_handoff.md  heteroscedastic_uncertainty.md  hierarchical_pattern_plan.md  net1_takeaways.md  net1_takeaways_dv_accuracy.md  net2_plan.md  oblique_info_limit.md  plan_capture_app.md  plan_train_from_scratch.md  proj_net_design.html  proj_net_scratch_eval.md  session2_recap.md  session_summary.md  tiling_brief.md
lux/: __init__.py  codesign.py  codesign_infer.py  codesign_vote.py  geometry.py  harness.py  io.py  metrics.py  proj_net.py  render.py  scene.py
scripts/: add_marray_captures.py  build_loaf.py  capture_app.py  coarse_phase_probe.py  codesign_carrier_gate.py  codesign_demod_probe.py  compare_backends.py  eval_capture.py  eval_clutter_quad.py  eval_hemisphere.py  eval_hemisphere_quad.py  gen_hemisphere_eval.py  gen_mitsuba_dataset.py  gen_patterns.py  gen_planar_dataset.py  gen_rasterizer_dataset.py  gen_training_data.py  make_capture_viewer.py  make_results_dashboard.py  overfit_oblique.py  predict_proj_net.py  preview_augment.py  resume_train_scratch.sh  run_benchmark.py  run_pbrt_dataset.py  test_codesign_vote.py  train_codesign.py  train_codesign_quad.py  train_conv_aug_linux.sh  train_conv_newaug_linux.sh  train_marray_rendered.py  train_net2_attn.sh  train_neural.py  train_prod_cuda.sh  train_proj_net.py  train_quad_rendered.py  validate_blur_oracle.py  verify_gt_proj.py
tests/: test_pipeline.py
web/: index.html
(+40 files in other folders)
